2007-09-21  David Shaw  <dshaw@jabberwocky.com>

	* configure.ac: Release version 0.5.

$Id$